# empkins-io

./: .bumpversion.toml  .gitignore  README.md  _tasks.py  config.json  pyproject.toml  ruff.toml
empkins_io/: __init__.py
empkins_io/datasets/: __init__.py
empkins_io/datasets/d03/: __init__.py
empkins_io/datasets/d03/_utils/: check_data_completeness.py  dataset_utils.py  partial_copy_script.py
empkins_io/datasets/d03/macro_ap01/: __init__.py  _base_dataset.py  _gait_dataset.py  _sync_ecg_mocap.py  _tsst_dataset.py  _tsst_dataset_per_phase.py  helper.py
empkins_io/datasets/d03/macro_ap03/: __init__.py  _base_dataset.py  _tsst_dataset.py
empkins_io/datasets/d03/macro_prestudy/: dataset.py  helper.py
empkins_io/datasets/d03/micro_gapvii/: __init__.py  _custom_synced_session.py  _dataset.py  _ecg_dataset.py  helper.py
empkins_io/datasets/d03/micro_prestudy/: dataset.py  helper.py
empkins_io/datasets/d05/: __init__.py
empkins_io/datasets/d05/guardian/: __init__.py  _helper.py  _tfm_dataset.py  _tfm_tilt_table_loader.py
empkins_io/datasets/gapvii/dip_study/: dataset.py  helper.py
empkins_io/datasets/radarcardia/: __init__.py
empkins_io/datasets/radarcardia/base/: dataset.py  helper.py
empkins_io/datasets/radarcardia/prestudy1/: __init__.py  dataset.py  helper.py
empkins_io/datasets/radarcardia/prestudy_AS/: __init__.py  dataset.py
empkins_io/datasets/radarcardia/prestudy_H/: __init__.py  dataset.py
empkins_io/datasets/radarcardia/prestudy_NP/: __init__.py  dataset.py
empkins_io/datasets/radarcardia/prestudy_TUHH/: __init__.py  dataset.py
empkins_io/datasets/radarcardia/prestudy_UB/: __init__.py  dataset.py
empkins_io/datasets/radarcardia/prestudy_WB/: __init__.py  dataset.py
empkins_io/datasets/radarcardia/study/: __init__.py  dataset.py  helper.py
empkins_io/datasets/radarstenosis/prestudy/: dataset.py
empkins_io/datasets/vadas/: _dataset.py
empkins_io/datasets/vrsr/: __init__.py
empkins_io/datasets/vrsr/tp_01/: __init__.py  _dataset.py  helper.py
empkins_io/io/: __init__.py  a04.py
empkins_io/processing/: __init__.py
empkins_io/processing/a04/: __init__.py  a04.py  plotting.py
empkins_io/processing/mis/: __init__.py  a04.py  mis.py  plotting.py
empkins_io/processing/motion_capture/: __init__.py  _base.py  bvh.py  calc.py  center_mass.py
empkins_io/processing/motion_capture/perception_neuron/: __init__.py  perception_neuron.py
empkins_io/processing/perception_neuron/: __init__.py  perception_neuron.py
empkins_io/processing/utils/: __init__.py  rotations.py
empkins_io/sensor_validation/: __init__.py  metrics.py  plotting.py
empkins_io/sensors/: __init__.py  a04.py  mis.py  utils.py
empkins_io/sensors/a04/: __init__.py  a04.py  plotting.py
empkins_io/sensors/empatica/: empatica.py
empkins_io/sensors/emrad/: __init__.py  convert_file_type.py  emrad.py  emrad_d05_data_saver.py  emrad_d05_db_handling.py
empkins_io/sensors/holter_ecg/: __init__.py  holter_ecg.py
empkins_io/sensors/mis/: __init__.py  a04.py  mis.py
empkins_io/sensors/motion_capture/: __init__.py  body_parts.py  motion_capture_systems.py
empkins_io/sensors/motion_capture/motion_capture_formats/: __init__.py  _base_format.py  _bvh_data.py  _calc_data.py  bvh.py  bvh_data.py  calc.py  center_mass.py  mvnx.py
empkins_io/sensors/motion_capture/motion_capture_formats/_utils/: __init__.py  mvnx_parser.py
empkins_io/sensors/motion_capture/openpose/: openpose.py
empkins_io/sensors/motion_capture/perception_neuron/: __init__.py  perception_neuron.py
empkins_io/sensors/motion_capture/xsens/: xsens.py
empkins_io/sensors/perception_neuron/: __init__.py  _bvh.py  _calc.py  _calc_data.py  _center_mass.py  body_parts.py  perception_neuron.py
empkins_io/sensors/psg/: psg.py  psg_channels.py  psg_systems.py
empkins_io/sensors/tfc/: __init__.py  tfc.py
empkins_io/sensors/tfm/: __init__.py  tfm.py
empkins_io/sensors/zebris/: _zebris.py
empkins_io/signal_alignment/: __init__.py  signal_alignment.py  video_imu_sync.py
empkins_io/sync/: _sync.py
empkins_io/utils/: _types.py  exceptions.py
examples/empatica/: Import_Empatica.ipynb
examples/emrad/: Emrad_Import.ipynb
examples/emrad/data/: test_data.h5
examples/mis/: Mis_Import.ipynb
examples/synchronization/: Synchronization.ipynb  synchronization_demo.ipynb  synchronization_demo.py
examples/synchronization/data/: data_sync-test-01.h5  data_sync-test-02.acq
examples/synchronization/data/sync_demo/falling-clock/: Sync_Board_Demo_falling-clock.acq
examples/synchronization/data/sync_demo/falling-edge/: Sync_Board_Demo_falling-edge.acq
src/empkins_io/: __init__.py
src/empkins_io/datasets/: __init__.py
src/empkins_io/datasets/d03/: __init__.py
src/empkins_io/datasets/d07/: __init__.py
src/empkins_io/datasets/gapvii/: __init__.py
src/empkins_io/datasets/radarcardia/: __init__.py
src/empkins_io/datasets/radarstenosis/: __init__.py  dataset.py  helper.py
src/empkins_io/datasets/vadas/: __init__.py  _dataset.py
src/empkins_io/datasets/vrsr/: __init__.py
src/empkins_io/processing/: __init__.py
src/empkins_io/processing/mis/: __init__.py  mis.py  plotting.py
src/empkins_io/processing/motion_capture/: _base.py  bvh.py  calc.py  center_mass.py
src/empkins_io/processing/utils/: rotations.py
src/empkins_io/sensors/: __init__.py  utils.py
src/empkins_io/sensors/empatica/: __init__.py  empatica.py
src/empkins_io/sensors/emrad/: __init__.py  emrad.py
src/empkins_io/sensors/eo_mbs/: __init__.py  eo_mbs.py
src/empkins_io/sensors/mis/: __init__.py  mis.py
src/empkins_io/sensors/motion_capture/: body_parts.py  motion_capture_systems.py
src/empkins_io/sensors/psg/: psg.py  psg_channels.py  psg_systems.py
src/empkins_io/sensors/tfm/: tfm.py
src/empkins_io/sensors/zebris/: __init__.py  _helper.py  _zebris.py
src/empkins_io/signal_alignment/: __init__.py  signal_alignment.py  video_imu_sync.py
src/empkins_io/sync/: __init__.py  _sync.py
src/empkins_io/utils/: _types.py  exceptions.py
tests/: test_empkins_io.py
(+61 files in other folders)
