[tool.poetry]
name = "empkins-io"
version = "0.1.1"
description = "A Python package to load and convert data from EmpkinS sensors."
authors = ["Robert Richer <robert.richer@fau.de>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = ">=1.19,<1.25"
pandas = "^1.2.0"
scipy = "^1.7.0"
matplotlib = "^3"
# until broken changes are fixed, we cant use seaborn >= 0.13
seaborn = "<0.13"
statsmodels = "^0"
pyquaternion = "^0.9.9"
biopsykit = {path="../BioPsyKit", extras=["jupyter"]}
#biopsykit = {git="https://github.com/mad-lab-fau/BioPsyKit.git", branch="main", extras=["jupyter"]}
h5py = "^3.5.0"
tpcp = "^0.13"
resampy = "^0.4.2"
tables = "^3.9.2"

avro = "^1.11.3"
fastavro = "^1.4.0"
# opencv is optional, but required for some functions
opencv-python = {version="^4.8", optional=true}
construct = "^2.10.70"
openpyxl = "^3.1.5"

[tool.poetry.extras]
opencv = ["opencv-python"]

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
black = { version="^22", extras=["jupyter", "d"] }
ruff = "^0.0.261"
poethepoet = "^0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | docs
    | build
    | dist
    | \.virtual_documents
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
skip_gitignore = true

[tool.poe.tasks]
_black = "black ."
_black_check = "black . --check"
_isort = "isort **/*.py"
_isort_check = "isort **/*.py --check-only"

# Reformat all files using black and sort import
_format_black = "black ."
_format_ruff = "ruff . --fix-only"
format = { sequence = ["_format_black", "_format_ruff"], help = "Format all files." }
lint = { cmd = "ruff empkins_io --fix", help = "Lint all files with ruff." }
_lint_ci = "ruff empkins_io --format=github"
_check_black = "black . --check"
ci_check = { sequence = ["_check_black", "_lint_ci"], help = "Check all potential format and linting issues." }
test = {cmd = "pytest --cov=empkins_io --cov-report=xml", help = "Run Pytest with coverage." }
update_version = {"script" = "_tasks:task_update_version"}
register_ipykernel = { cmd = "python -m ipykernel install --user --name empkins-io --display-name empkins-io", help = "Add a new jupyter kernel for the project."}
remove_ipykernel = { cmd = "jupyter kernelspec uninstall empkins-io", help = "Remove the project specific jupyter kernel."}
default = {sequence = ["format", "lint", "test"], help = "Run the default pipeline, consisting of formatting, linting, and testing."}
