[project]
name = "empkins-io"
version = "0.1.1"
description = "A Python package to load and convert data from EmpkinS sensors."
authors = [{ name = "Robert Richer", email = "robert.richer@fau.de" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "pyquaternion>=0.9.9,<0.10",
    "biopsykit",
    "h5py>=3.5.0,<4",
    "tpcp>=2",
    "resampy>=0.4.2,<0.5",
    "avro>=1.11.3,<2",
    "fastavro>=1.4.0,<2",
    "pandas-stubs==2.3.0.250703",
]

[project.optional-dependencies]
opencv = ["opencv-python~=4.8"]

[dependency-groups]
dev = [
    "ruff>=0.6.3,<0.7",
    "ipykernel>=6.29.5,<7",
    "ipympl>=0.9.6,<0.10",
]

[tool.uv.sources]
biopsykit = { git = "https://github.com/mad-lab-fau/BioPsyKit.git", branch = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | docs
    | build
    | dist
    | \.virtual_documents
  )/
)
'''

[tool.poe.tasks]
_format = "ruff format ."
_auto_fix = "ruff check . --fix-only --show-fixes --exit-zero"
_auto_fix_unsafe = "ruff check . --fix-only --show-fixes --exit-zero --unsafe-fixes"
format = ["_auto_fix", "_format"]
format_unsafe = ["_auto_fix_unsafe", "_format"]
lint = { cmd = "ruff check src --fix", help = "Lint all files with ruff." }
_lint_ci = "ruff check src --output-format=github"
_check_format = "ruff format . --check"
ci_check = { sequence = ["_check_format", "_lint_ci"], help = "Check all potential format and linting issues." }
test = {cmd = "pytest --cov=empkins_io --cov-report=xml", help = "Run Pytest with coverage." }
version = { "script" = "_tasks:task_update_version" }
register_ipykernel = { cmd = "python -m ipykernel install --user --name empkins-io --display-name empkins-io", help = "Add a new jupyter kernel for the project."}
remove_ipykernel = { cmd = "jupyter kernelspec uninstall empkins-io", help = "Remove the project specific jupyter kernel."}
default = {sequence = ["format", "lint", "test"], help = "Run the default pipeline, consisting of formatting, linting, and testing."}
